--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -155,9 +155,31 @@ header {
                     width: 100%;
                     background: #000;
                     position: absolute;
-                    top: 80%;
+                    top: 70%;
                     right: 0;
                     left: 0;
+                }
+            }
+
+            .line {
+                background: #000;
+                width: 0px;
+                height: 2px;
+                position: absolute;
+                left: 50%;
+                margin-left: -70px;
+                transition: 0.3s width,
+                    0.4s opacity;
+                top: 73%;
+                padding: 0;
+                opacity: 0;
+
+                &.active {
+                    width: 140px;
+                    opacity: 1;
+                    padding: 0;
+                    transition: 0.4s width,
+                        0.3s opacity;
                 }
             }
         }
