--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -200,7 +200,7 @@ header {
         margin-bottom: 10vh;
 
         &__img {
-            margin-bottom: 15vh;
+            margin-bottom: 13vh;
         }
 
         &::before {
@@ -255,11 +255,11 @@ header {
             }
         }
 
-        &:nth-of-type(2) {
+        &:nth-of-type(3) {
             &::before {
                 position: absolute;
                 content: "";
-                top: 12vh;
+                top: 11vh;
                 background: #000;
                 height: 238px;
                 width: 500px;
@@ -267,6 +267,72 @@ header {
                 right: 9.5vh;
                 border-top-right-radius: 30px;
                 border-bottom-right-radius: 87px;
+            }
+        }
+    }
+}
+
+
+// Download Extension
+.main {
+    &__download {
+        text-align: center;
+        margin-top: 15vh;
+    }
+
+    .download {
+        margin-bottom: 20vh;
+
+        &__header {
+            font-size: 2.4rem;
+        }
+
+        &__title {
+            width: 80%;
+            margin: 0 auto;
+            font-size: 1.6rem;
+            line-height: 2.2rem;
+        }
+    }
+
+    .install {
+        @include flex(center, center);
+        flex-direction: column;
+        width: 100%;
+
+        &__extension {
+            background: lightblue;
+            margin: 0 auto;
+            margin-bottom: 20vh;
+
+            &--icon {
+                display: grid;
+                place-items: center;
+                padding: 40px 20px;
+                text-align: center;
+
+                .header {
+                    margin-top: -1vh;
+                    font-size: 2.4rem;
+                    line-height: 10px;
+                    width: 100%;
+                }
+
+                .text {
+                    font-size: 1.6em;
+                    margin-top: -4vh;
+                }
+            }
+
+            &--btn {
+                margin-top: 20vh;
+                width: 100%;
+
+                a {
+                    padding: 20px 40px;
+                    background: grey;
+                    font-size: 1.4rem;
+                }
             }
         }
     }
