--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -372,55 +372,160 @@ header {
     width: 100%;
 
     &__one {
-        &:nth-of-type(1) {
-            height: 30vh;
+        .question {
+            @include flex(center, center);
+            flex-direction: column;
+            width: 90%;
+            margin: 0 auto;
+            background: lightblue;
 
-            .question {
-                @include flex(center, center);
-                flex-direction: column;
-                width: 90%;
-                margin: 0 auto;
-                background: lightblue;
+            &__header {
+                width: 100%;
+                @include flex(space-between, center);
+                padding: 10px 20px;
+                position: relative;
+                border-bottom: 1px solid blue;
 
-                &__header {
-                    width: 100%;
-                    @include flex(space-between, center);
-                    padding: 10px 20px;
-                    position: relative;
-                    border-bottom: 1px solid blue;
-
-                    h2 {
-                        font-size: 1.4rem;
-                        font-weight: 500;
-                    }
+                h2 {
+                    font-size: 1.4rem;
+                    font-weight: 500;
                 }
+            }
 
-                &__answer {
-                    padding: 0px 0px;
-                    width: 80%;
-                    max-height: 0vh;
-                    overflow: hidden;
-                    transition: 0.5s padding,
-                        0.3s max-height,
+            &__answer {
+                padding: 0px 0px;
+                width: 80%;
+                max-height: 0px;
+                overflow: hidden;
+                transition: 0.5s padding,
+                    0.5s max-height,
+                    0.3s width;
+
+                &.active {
+                    transition:
+                        0.3s padding,
+                        0.5s max-height,
                         0.3s width;
-
-                    &.active {
-                        transition:
-                            0.3s padding,
-                            0.5s max-height,
-                            0.3s width;
-
-                        padding: 20px 0px;
-                        max-height: 100%;
-                        padding: 20px 0px;
-                    }
-
-                    p {
-                        line-height: 2.4rem;
-                        font-size: 1.6rem;
-                    }
+                    padding: 20px 0px;
+                    max-height: 100%;
                 }
 
+                p {
+                    line-height: 2.4rem;
+                    font-size: 1.6rem;
+                }
+            }
+
+        }
+    }
+}
+
+.infoButton {
+    @include flex(center, center);
+    margin-top: 6vh;
+    width: 100%;
+
+    &__link {
+        padding: 15px 30px;
+        border-radius: 5px;
+        background: lightblue;
+        font-size: 1.4rem;
+    }
+}
+
+
+// Stay Updated
+.stayUpdated {
+    margin-top: 20vh;
+    background: green;
+    margin-bottom: 20vh;
+    height: 60vh;
+    padding: 50px 20px;
+    @include flex(flex-start, center);
+    flex-direction: column;
+
+    &__text {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 5vh;
+
+        h3 {
+            font-size: 1.6rem;
+            line-height: 2.2rem;
+            font-weight: 400;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+        }
+
+        h4 {
+            padding-top: 2vh;
+            font-size: 2.4rem;
+            line-height: 3.0rem;
+        }
+    }
+
+    &__email {
+        width: 100%;
+
+        form {
+            // background: lightblue;
+            @include flex(center, center);
+            flex-direction: column;
+
+            input,
+            button {
+                outline: none;
+                border: none;
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+            .email {
+                margin-bottom: 3vh;
+                position: relative;
+
+                &:after {
+                    content: "";
+                    // border-bottom: 20px solid blue;
+                    // border: 2px solid blue;
+                    height: 1px;
+                    background: lightblue;
+                    position: absolute;
+                    width: 100%;
+                    padding: 20px;
+                }
+
+                input {
+
+                    width: 250px;
+                    height: 50px;
+                    font-family: inherit;
+                    @include flex(center, center);
+                    border-radius: 4px;
+                    text-indent: 20px;
+                    font-size: 1.6rem;
+                }
+            }
+
+            .submit {
+                button {
+                    width: 250px;
+                    font-family: inherit;
+                    font-size: 1.4rem;
+                    @include flex(center, center);
+                    padding: 15px 0px;
+                    border-radius: 6px;
+                    transition: transform 0.4s;
+                    transform: scale(1);
+
+                    &:active {
+                        transition: transform 0.4s;
+                        transform: scale(0.95);
+                    }
+                }
             }
         }
     }
