--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -562,3 +562,37 @@ header {
         }
     }
 }
+
+
+// Footer
+
+.footer {
+    @include flex(center, center);
+    flex-direction: column;
+    padding: 30px;
+    background: lightblue;
+
+    &__links {
+        .links {
+            padding: 25px;
+            @include flex(center, center);
+            flex-direction: column;
+
+            li {
+                padding: 10px;
+
+                &>a {
+                    letter-spacing: 3px;
+                    font-size: 1.8rem;
+                    text-transform: uppercase;
+                }
+            }
+
+
+        }
+    }
+    &__icons{
+        @include flex(space-between,center);
+        width: 30%;
+    }
+}
