--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,9 +23,75 @@ header {
     @include flex(space-between, center);
     height: 16vh;
     margin-top: 2vh;
+
+
 }
 
+// Mobile/Desktop Navbar
+
+.nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 99999999;
+    background: lightblue;
+    @include flex(flex-start, center);
+    flex-direction: column;
+    padding: 60px 20px;
+    width: 100%;
+
+    &__header {
+        @include flex(space-between, center);
+        width: 90%;
+        margin-bottom: 3vh;
+
+        svg {
+            width: 30px;
+            fill: red;
+        }
+    }
+
+    &__links {
+        @include flex(center, center);
+        width: 100%;
+        margin-top: 6vh;
+
+        li {
+
+            @include flex(center, center);
+            margin-bottom: 20px;
+            padding-bottom: 3vh;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.37);
+            width: 300px;
+
+            &>a {
+                font-size: 2.4rem;
+            }
+
+            &:nth-of-type(4) {
+                border: transparent;
+
+                a {
+                    border: 2px solid white;
+                    padding: 10px;
+                    border-radius: 10px;
+                    margin: 0 auto;
+                    width: 300px;
+                    text-align: center;
+                }
+
+
+            }
+        }
+    }
+}
+
+
+
 .main {
+
     margin: 0 auto;
     overflow-x: hidden;
     position: relative;
@@ -591,8 +657,9 @@ header {
 
         }
     }
-    &__icons{
-        @include flex(space-between,center);
+
+    &__icons {
+        @include flex(space-between, center);
         width: 30%;
     }
 }
