--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,8 @@ header {
 // Mobile/Desktop Navbar
 
 .nav {
+    transform: translate(-300%, 0px);
+    transition: 0.5s ease transform;
     position: fixed;
     right: 0;
     top: 0;
@@ -39,13 +41,18 @@ header {
     background: lightblue;
     @include flex(flex-start, center);
     flex-direction: column;
-    padding: 60px 20px;
+    padding: 50px 20px;
     width: 100%;
+
+    &.active {
+        transition: 0.5s ease transform;
+        transform: translate(0%, 0px);
+    }
 
     &__header {
         @include flex(space-between, center);
         width: 90%;
-        margin-bottom: 3vh;
+        margin-bottom: 2vh;
 
         svg {
             width: 30px;
@@ -56,7 +63,7 @@ header {
     &__links {
         @include flex(center, center);
         width: 100%;
-        margin-top: 6vh;
+        margin-top: 4vh;
 
         li {
 
@@ -67,7 +74,10 @@ header {
             width: 300px;
 
             &>a {
-                font-size: 2.4rem;
+                font-size: 2.0rem;
+                text-transform: uppercase;
+                font-weight: 400;
+                letter-spacing: 3px;
             }
 
             &:nth-of-type(4) {
@@ -80,12 +90,23 @@ header {
                     margin: 0 auto;
                     width: 300px;
                     text-align: center;
+                    font-weight: 500;
                 }
 
 
             }
         }
     }
+
+    &__icons {
+        @include flex(space-around, center);
+        background: grey;
+        width: 40%;
+        margin-top: 21vh;
+        // align-self: flex-end;
+    }
+
+
 }
 
 
