--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -316,7 +316,8 @@ header {
                 font-size: 1.6rem;
                 line-height: 2.4rem;
                 padding-bottom: 5vh;
-
+                width: 88%;
+                margin: 0 auto;
             }
 
             &--link {
@@ -330,27 +331,39 @@ header {
 
 
 
-        
+
     }
 
 }
 
-.two{
-    .panel__img{
-        &::before{
-               content: "";
-               background: #000;
-               padding: 10px;
-               position: absolute;
-               height: 190px;
-               width: 324px;
-               z-index: -9999;
-               right: 5vh;
-               top: 9vh;
-               border-top-right-radius: 97px;
-               border-bottom-right-radius: 97px;
+.two {
+
+    .panel__img {
+        margin-bottom: 7vh;
+
+        &::before {
+            height: 225px;
+            width: 330px;
+            right: 11vh;
+            top: 9vh;
         }
     }
+}
+
+.three {
+    .panel__img {
+        margin-bottom: 13vh;
+
+        &::before {
+            height: 231px;
+            width: 356px;
+            right: 9vh;
+            top: 12vh;
+
+
+        }
+    }
+
 }
 
 // Download Extension
@@ -458,13 +471,13 @@ header {
             width: 90%;
             margin: 0 auto;
             background: lightblue;
+            border-bottom: 1px solid blue;
 
             &__header {
                 width: 100%;
                 @include flex(space-between, center);
-                padding: 10px 20px;
+                padding: 15px 20px;
                 position: relative;
-                border-bottom: 1px solid blue;
 
                 h2 {
                     font-size: 1.4rem;
@@ -473,21 +486,20 @@ header {
             }
 
             &__answer {
-                padding: 0px 0px;
+                padding: 0px;
                 width: 80%;
                 max-height: 0px;
                 overflow: hidden;
                 transition: 0.5s padding,
-                    0.5s max-height,
+                    0.5s max-height ease-in,
                     0.3s width;
 
                 &.active {
-                    transition:
-                        0.3s padding,
-                        0.5s max-height,
-                        0.3s width;
+                    max-height: 1000px;
                     padding: 20px 0px;
-                    max-height: 100%;
+                    transition:
+                        0.5s max-height,
+                        0.5s width;
                 }
 
                 p {
